// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaipAccountSelectorList renders all accounts with balances 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#4459ff1a",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#C7144F",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711651,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.46329603511986217,
                              0.8862035792312145,
                              -0.8862035792312145,
                              0.46329603511986217,
                              29.06767649409735,
                              -8.290603334655817,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4280576225,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.5778576243835052,
                              0.8161375900801603,
                              -0.8161375900801603,
                              -0.5778576243835052,
                              51.62016714634118,
                              17.239003094412087,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278407261,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.7046342099635947,
                              -0.7095707365365209,
                              0.7095707365365209,
                              0.7046342099635947,
                              -25.225718686778755,
                              -4.611026307883787,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityRole="checkbox"
            accessible={true}
            style={
              {
                "backgroundColor": "#4459ff1a",
                "bottom": 0,
                "flexDirection": "row",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 4,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#4459ff",
                  "borderRadius": 2,
                  "marginLeft": 4,
                  "marginVertical": 4,
                  "width": 4,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#2461E1",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711643,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.4210358133674908,
                              -0.9070440142914651,
                              0.9070440142914651,
                              -0.4210358133674908,
                              8.266156821330682,
                              42.79486424435327,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278289804,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.8241261886220156,
                              -0.5664062369248329,
                              0.5664062369248329,
                              -0.8241261886220156,
                              29.655077569991498,
                              50.077446101884746,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294394881,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.6704266189587993,
                              -0.7419758409756162,
                              0.7419758409756162,
                              0.6704266189587993,
                              8.152366664413217,
                              -0.7899246956676649,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $6400.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CaipAccountSelectorList renders all accounts with right accessory 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#4459ff1a",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          disabled={true}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#C7144F",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711651,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.46329603511986217,
                              0.8862035792312145,
                              -0.8862035792312145,
                              0.46329603511986217,
                              29.06767649409735,
                              -8.290603334655817,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4280576225,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.5778576243835052,
                              0.8161375900801603,
                              -0.8161375900801603,
                              -0.5778576243835052,
                              51.62016714634118,
                              17.239003094412087,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278407261,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.7046342099635947,
                              -0.7095707365365209,
                              0.7095707365365209,
                              0.7046342099635947,
                              -25.225718686778755,
                              -4.611026307883787,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    testID="right-accessory"
                  >
                    0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272 - Account 1
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityRole="checkbox"
            accessible={true}
            style={
              {
                "backgroundColor": "#4459ff1a",
                "bottom": 0,
                "flexDirection": "row",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 4,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#4459ff",
                  "borderRadius": 2,
                  "marginLeft": 4,
                  "marginVertical": 4,
                  "width": 4,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          disabled={true}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#2461E1",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711643,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.4210358133674908,
                              -0.9070440142914651,
                              0.9070440142914651,
                              -0.4210358133674908,
                              8.266156821330682,
                              42.79486424435327,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278289804,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.8241261886220156,
                              -0.5664062369248329,
                              0.5664062369248329,
                              -0.8241261886220156,
                              29.655077569991498,
                              50.077446101884746,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294394881,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.6704266189587993,
                              -0.7419758409756162,
                              0.7419758409756162,
                              0.6704266189587993,
                              8.152366664413217,
                              -0.7899246956676649,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    testID="right-accessory"
                  >
                    0xd018538C87232FF95acbCe4870629b75640a78E7 - Account 2
                  </View>
                </View>
              </View>
            </View>
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CaipAccountSelectorList renders correctly 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#4459ff1a",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#C7144F",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711651,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.46329603511986217,
                              0.8862035792312145,
                              -0.8862035792312145,
                              0.46329603511986217,
                              29.06767649409735,
                              -8.290603334655817,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4280576225,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.5778576243835052,
                              0.8161375900801603,
                              -0.8161375900801603,
                              -0.5778576243835052,
                              51.62016714634118,
                              17.239003094412087,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278407261,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.7046342099635947,
                              -0.7095707365365209,
                              0.7095707365365209,
                              0.7046342099635947,
                              -25.225718686778755,
                              -4.611026307883787,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityRole="checkbox"
            accessible={true}
            style={
              {
                "backgroundColor": "#4459ff1a",
                "bottom": 0,
                "flexDirection": "row",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 4,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#4459ff",
                  "borderRadius": 2,
                  "marginLeft": 4,
                  "marginVertical": 4,
                  "width": 4,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#2461E1",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711643,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.4210358133674908,
                              -0.9070440142914651,
                              0.9070440142914651,
                              -0.4210358133674908,
                              8.266156821330682,
                              42.79486424435327,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278289804,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.8241261886220156,
                              -0.5664062369248329,
                              0.5664062369248329,
                              -0.8241261886220156,
                              29.655077569991498,
                              50.077446101884746,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294394881,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.6704266189587993,
                              -0.7419758409756162,
                              0.7419758409756162,
                              0.6704266189587993,
                              8.152366664413217,
                              -0.7899246956676649,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $6400.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CaipAccountSelectorList renders network icons for accounts with transaction activity 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#4459ff1a",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#C7144F",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711651,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.46329603511986217,
                              0.8862035792312145,
                              -0.8862035792312145,
                              0.46329603511986217,
                              29.06767649409735,
                              -8.290603334655817,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4280576225,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.5778576243835052,
                              0.8161375900801603,
                              -0.8161375900801603,
                              -0.5778576243835052,
                              51.62016714634118,
                              17.239003094412087,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278407261,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.7046342099635947,
                              -0.7095707365365209,
                              0.7095707365365209,
                              0.7046342099635947,
                              -25.225718686778755,
                              -4.611026307883787,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityRole="checkbox"
            accessible={true}
            style={
              {
                "backgroundColor": "#4459ff1a",
                "bottom": 0,
                "flexDirection": "row",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 4,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#4459ff",
                  "borderRadius": 2,
                  "marginLeft": 4,
                  "marginVertical": 4,
                  "width": 4,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <TouchableOpacity
          onLongPress={[Function]}
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#2461E1",
                          "borderRadius": 16,
                          "height": 32,
                          "width": 32,
                        },
                        {
                          "borderRadius": 8,
                        },
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={32}
                      bbWidth={32}
                      focusable={false}
                      height={32}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 32,
                            "width": 32,
                          },
                        ]
                      }
                      width={32}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294711643,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.4210358133674908,
                              -0.9070440142914651,
                              0.9070440142914651,
                              -0.4210358133674908,
                              8.266156821330682,
                              42.79486424435327,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278289804,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              -0.8241261886220156,
                              -0.5664062369248329,
                              0.5664062369248329,
                              -0.8241261886220156,
                              29.655077569991498,
                              50.077446101884746,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294394881,
                              "type": 0,
                            }
                          }
                          height={32}
                          matrix={
                            [
                              0.6704266189587993,
                              -0.7419758409756162,
                              0.7419758409756162,
                              0.6704266189587993,
                              8.152366664413217,
                              -0.7899246956676649,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={32}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $6400.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "paddingRight": 20,
            }
          }
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="main-wallet-account-actions"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="MoreVertical"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
